Implement dummy website content

--- a/.vscode/extensions.json
+++ b/.vscode/extensions.json
@@ -1,3 +1,12 @@
 {
-  "recommendations": ["Vue.volar"]
+  "recommendations": [
+    "cpylua.language-postcss",
+    "dbaeumer.vscode-eslint",
+    "editorconfig.editorconfig",
+    "esbenp.prettier-vscode",
+    "mikestead.dotenv",
+    "william-voyek.vscode-nginx",
+    "vue.volar"
+  ],
+  "unwantedRecommendations": []
 }
