Make assets cache immutable for a year

--- a/vercel.json
+++ b/vercel.json
@@ -18,6 +18,15 @@
           "value": "public, max-age=86400, must-revalidate"
         }
       ]
+    },
+    {
+      "source": "/assets/(.*)",
+      "headers": [
+        {
+          "key": "Cache-Control",
+          "value": "public, max-age=31556952, immutable"
+        }
+      ]
     }
   ],
   "rewrites": [
