--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "type": "module",
   "scripts": {
     "dev": "vite",
-    "build": "vite build",
+    "build": "vite-ssg build",
     "preview": "vite preview"
   },
   "dependencies": {
@@ -14,10 +14,12 @@
     "vue-router": "^4.5.1"
   },
   "devDependencies": {
+    "@unhead/vue": "^2.0.13",
     "@vitejs/plugin-vue": "^6.0.0",
     "autoprefixer": "^10.4.19",
     "postcss": "^8.4.38",
     "tailwindcss": "^3.4.3",
-    "vite": "^7.0.4"
+    "vite": "^7.0.4",
+    "vite-ssg": "^28.0.0"
   }
 }
