Specify all routes in Vercel config

--- a/vercel.json
+++ b/vercel.json
@@ -28,5 +28,15 @@
         }
       ]
     }
+  ],
+  "rewrites": [
+    {
+      "source": "/",
+      "destination": "/index.html"
+    },
+    {
+      "source": "/(.*)",
+      "destination": "/$1.html"
+    }
   ]
 }
