--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
     "postcss": "^8.4.38",
     "tailwindcss": "^3.4.3",
     "vite": "^7.0.4",
-    "vite-plugin-sitemap": "^0.8.2",
-    "vite-ssg": "^28.0.0"
+    "vite-ssg": "^28.0.0",
+    "vite-ssg-sitemap": "^0.10.0"
   }
 }
